# Nova_ROS2

./: .gitignore  LICENSE  README.md
nova2/: .setup_assistant  CMakeLists.txt  package.xml
nova2/config/: kinematics.yaml  moveit_controllers.yaml  nova2_robot.urdf.xacro  ros2_controllers.yaml
nova2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
nova5/: .setup_assistant  CMakeLists.txt  package.xml
nova5/config/: kinematics.yaml  moveit_controllers.yaml  nova2_robot.srdf  nova5_robot.srdf  nova5_robot.urdf.xacro  ros2_controllers.yaml
nova5/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
nova5_2f85_description/: CMakeLists.txt  package.xml
nova5_2f85_description/urdf/: nova5_2f85.urdf  nova5_2f85.urdf.xacro
nova5_2f85_moveit/: CMakeLists.txt  package.xml
nova5_2f85_moveit/config/: full_bringup.rviz  moveit.rviz  moveit_controllers.yaml  nova5_2f85_controllers.yaml  nova5_robot_2f85.ros2_control.xacro  nova5_robot_2f85.srdf  ompl_planning.yaml
nova5_2f85_moveit/launch/: nova5_2f85_moveit.launch.py
nova5_2f85_mtc/: CMakeLists.txt  package.xml
nova5_2f85_mtc/src/: grasp_task_planner_mtc_node.cpp
robot_description/: package.xml  setup.py
robot_description/urdf/: nova2_robot.urdf  nova2_robot.xacro  nova5_robot.xacro  nova5_robot_2f85.urdf
robotiq_2f85_bringup/: package.xml  setup.cfg  setup.py
robotiq_2f85_bringup/config/: camera_calibration.yaml  grasp_task_planner.yaml  tags_36h11.yaml
robotiq_2f85_bringup/launch/: nova5_full_bringup.launch.py
robotiq_2f85_bringup/robotiq_2f85_bringup/: action_server.py  apriltag_arm_planner.py  apriltag_pose_printer.py  delta_z_arm_motion.py  grasp_task_planner.py  gripper_cmd_sender.py  gripper_feedback_publisher.py  gripper_modbus.py  gripper_modbus_manager.py  nova5_2f85_joint_states.py  planning_scene_table.py  web_command.py
robotiq_2f85_bringup/test/: action_server.py  apriltag_detection.launch.py  camera_publisher.launch.py  gripper_cmd_sender.py  robotiq_2f85_action_server.launch.py  test_action_server_feedback.py  test_action_server_launch.py  test_apriltag_arm_planner.py  test_apriltag_pose_printer.py  test_camera_publisher.py  test_grasp_task_planner.py  test_gripper_cmd_sender.py  test_gripper_modbus_manager.py  test_nova5_full_bringup_launch.py  test_planning_scene_table.py  test_tags_config.py  test_web_command.py
