<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_2f85_bringup</name>
  <version>0.0.0</version>
  <description>Dobot Nova5 gripper and camera bringup nodes.</description>
  <maintainer email="cpslab@todo.todo">cpslab</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>control_msgs</depend>
  <depend>dobot_msgs_v3</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>dobot_bringup_v3</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
